# ndk-pkg

./: .gitignore  .markdownlint.json  :w  Dockerfile  Dockerfile-china  LICENSE  Makefile  PKGBUILD  README.md  _typos.toml  bf16-gemm-1x4c8-minmax-neonbf16-bfdot-0b16c9.c  bf16-gemm-1x4c8-minmax-neonbf16-bfdot-0b16c9.sh  bf16-gemm-1x4c8-minmax-neonbf16-bfdot-0b16c9.tar.xz  build-core.sh  build-docker-image.sh  build.sh  docker-build.sh  fonts.conf  github-actions-workflow-template  haha.txt  install-gcc-via-syspm.sh  install.sh  ndk-pkg  ndk-pkg-core-latest-release-version  ndk-pkg-wrapper-cc.c  ndk-pkg-zsh-completion  ndk-pkg.cmake  pack-ndk-pkg-core  phases.d2  phases.dot  phases.svg.sh  phases.txt  proxy-cc.c  proxy-cxx.c  publish.sh  sed-in-place.c  uppm-shim-termux-pkg  wrapper-native-c++.c  wrapper-native-cc.c  wrapper-native-objc.c  (+7 more)
.github/: bundle.sh
.github/workflows/: alpine.yml  alpinelinux.yml  archlinux.yml  archlinux.yml.bak  centos.yml  centos.yml.bak  chroot-alpinelinux.yml  chroot-ubuntu.yml  ci.yml  container.yml  cygwin.yml  cygwin.yml.bak  debian.yml  debian.yml.bak  docker-container.yml  fedora.yml  fedora.yml.bak  fpliu-ndk-pkg-container.yml  gentoo.yml  gentoo.yml.bak  macos.yml  manjaro.yml  manjaro.yml.bak  markdownlint.yml  mint.yml  mint.yml.bak  msys2.yml  msys2.yml.bak  ndk-pkg-brew-version-compare.yml  ndk-pkg-brew-version-compare.yml.bak  openeuler.yml  opensuse-leap.yml  opensuse-tumbleweed.yml  publish-bundle.yml  publish-core.yml  publish-docker-image.yml  publish-main.yml  publish.yml  rockylinux.yml  typos-checker.yml  (+8 more)
core/: check-if-has-dynamic-section.c  install-curl-via-syspm.sh  install-gcc-via-syspm.sh  wrapper-native-c++.c  wrapper-native-cc.c  wrapper-native-objc.c  wrapper-target-c++.c  wrapper-target-cc-test.sh  wrapper-target-cc.c  zig-ar.c  zig-c++.c  zig-cc.c  zig-ranlib.c
docker/: build-image-via-docker.sh
homebrew/: ndk-pkg.rb
implementation-in-c/: CMakeLists.txt  ndk-pkg-deploy  ndk-pkg-depoly  ndk-pkg-export  ndk-pkg-install
implementation-in-c/build.d/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h
implementation-in-c/cmake/: FindJANSSON.cmake  FindPCRE2.cmake
implementation-in-c/src/: buildinfo.c  check.c  cleanup.c  config-SSL_CERT_FILE.c  config.h.in  copy.c  depends.c  download.c  env.c  error.c  examine-file-name-from-url.c  examine-file-type-from-url.c  fetch-from-git.c  fetch.c  formula-bat.c  formula-cat.c  formula-edit.c  formula-locate.c  formula-lookup.c  formula-parse.c  formula-repo-add.c  formula-repo-change.c  formula-repo-config-write.c  formula-repo-create.c  formula-repo-info.c  formula-repo-list-printf.c  formula-repo-list-update.c  formula-repo-list.c  formula-repo-lookup.c  formula-repo-parse.c  formula-repo-remove.c  formula-repo-sync.c  formula-view.c  generate-url-transform-sample.c  help.c  home.c  http-fetch.c  info-available.c  info-installed.c  inspect-package.c  (+32 more)
implementation-in-c/src/core/: base16.c  base16.h  base64.c  base64.h  exe.c  exe.h  http.c  http.h  log.h  self.c  self.h  sysinfo.c  tar.c  tar.h  url-transform.c  url-transform.h  url.c  url.h  zlib-flate.c  zlib-flate.h
implementation-in-c/src/core/regex/: pcre2.c  posix.c  regex.h
implementation-in-c/src/openssl/1/: sha256sum.c
implementation-in-c/src/openssl/3/: sha256sum.c
src/c/: CMakeLists.txt  a.out  formula-repo.c  formula-repo.h  formula.c  fs.c  fs.h  help.c  install.c  log.h  main.c  ndk-manager.c  ndk-manager.h  ndk-pkg  ndk-pkg.c  ndk-pkg.h  search.c
zsh-completion/: _ndk-pkg
